feat: Return both id and name of children volume for snapshots
Return both id and name of children volume for snapshots
